# api-management-portal

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260410_0001_initial_portal_schema.py
docs/superpowers/specs/: 2026-04-09-api-management-portal-design.md
scripts/: create_admin.py
src/portal/: config.py  logging_config.py  main.py  sse.py
src/portal/auth/: dependencies.py  hmac_auth.py  oauth2.py  passwords.py  sessions.py  tokens.py
src/portal/cache/: redis.py
src/portal/db/: models.py  session.py
src/portal/middleware/: csrf.py  rate_limit.py
src/portal/routes/: admin.py  auth.py  oauth2.py  pages.py  tokens.py  validate.py  vendors.py
src/portal/services/: audit.py  gateway_client.py
src/portal/static/: styles.css
src/portal/templates/: admin_audit.html  admin_users.html  admin_vendors.html  base.html  dashboard.html  login.html  tokens.html  vendor_detail.html  vendors.html
src/portal/templates/fragments/: admin_vendor_list.html  audit_list.html  token_created.html  token_list.html  user_list.html  vendor_list.html
tests/: conftest.py  test_datastar_flows.py  test_hmac_auth.py  test_tokens.py  test_validate.py
