[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-management-portal"
version = "0.1.0"
description = "Management portal for API gateway — human user token management"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.4",
    # HTTP client (for calling gateway admin API)
    "httpx>=0.28.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Redis (login rate limiting, caching)
    "redis[hiredis]>=5.2.0",
    # Configuration
    "pydantic-settings>=2.6.0",
    # Passwords
    "passlib[bcrypt]>=1.7.4",
    # Signed cookies
    "itsdangerous>=2.2.0",
    # Logging
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/portal"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
]
